# video-to-srt

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  video_to_text_pipeline.md  一键启动.bat
src/: __init__.py  audio_extractor.py  config.py  gpu_scheduler.py  gui.py  main.py  monitor.py  task_manager.py  text_formatter.py  transcribe_worker.py  utils.py
src/translator/: __init__.py  edge.py  parser.py  pipeline.py  types.py  writer.py
