[project]
name = "asr-pipeline"
version = "1.0.0"
description = "Offline batch video speech-to-text pipeline with GPU parallel inference + SRT translation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "nvidia-ml-py>=12.0.0",
    "nvidia-cublas-cu12>=12.0.0",
    "nvidia-cuda-runtime-cu12>=12.0.0",
    "tkinterdnd2>=0.5.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
